# Eurobot-2025-Navigation2

./: README.md
Navigation2/nav2_behavior_tree/: CMakeLists.txt  nav2_tree_nodes.xml
Navigation2/nav2_behaviors/: CMakeLists.txt  behavior_plugin.xml
Navigation2/nav2_msgs/: CMakeLists.txt
Navigation2_run/: CMakeLists.txt  package.xml
custom_bts/custom_nav_to_pose/: CMakeLists.txt  package.xml
custom_controller/: CMakeLists.txt  package.xml
custom_controller/src/: custom_controller.cpp
custom_layer/object_layer/: CMakeLists.txt  package.xml
custom_layer/path_layer/: CMakeLists.txt  package.xml  path_layer.xml
custom_layer/path_layer/include/path_layer/: path_layer.hpp
custom_layer/path_layer/plugin/: path_layer.cpp
custom_layer/path_layer/src/: RivalSim.cpp
custom_layer/rival_layer/: CMakeLists.txt  package.xml
navigation2_run/: CMakeLists.txt  package.xml
navigation2_run/launch/: bringup_launch.py  inspection_launch.py  localization_launch.py  navigation_launch.py  only_sim_launch.py  real_launch.py  real_w_odom_sim_launch.py  rviz_launch.py  sim_launch.py
navigation2_run/maps/: basic_map.yaml
navigation2_run/params/: machine_params.yaml  nav2_params.yaml  nav2_params_11.yaml  nav2_params_14.yaml  nav2_params_default.yaml  nav2_params_inspection.yaml  script.yaml
navigation2_run/rviz/: docking_backup.rviz  rviz_sim.rviz  test.rviz
navigation2_run/src/: odometry_sim.cpp  script_sim.cpp  system_check.cpp
opennav_docking/docs/: dock_robot_keywords.md
opennav_docking/opennav_docking/: CMakeLists.txt
(+45 files in other folders)
